--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
+    "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "prisma": "^6.3.1"
+    "prisma": "^6.3.1",
+    "uuid": "^11.0.5"
   }
 }
