--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
+    "@types/node-schedule": "^2.1.7",
     "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.10.0",
     "prisma": "^6.3.1",
     "uuid": "^11.0.5"
