--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "ioredis": "^5.5.0",
     "jsonwebtoken": "^9.0.2",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.10.0",
